Fri Apr 04 03:12:27 BST 2003  Olly Betts <olly@survex.com>

	* api/omenquire.cc,api/omstem.cc,common/omdebug.cc: Fixed to compile
	  when configure-d with --enable-debug-verbose --enable-debug=full.

Fri Apr 04 03:10:53 BST 2003  Olly Betts <olly@survex.com>

	* common/omstringstream.h: Removed unused code for writing
	  vector<string> to our own implementation of om_ostringstream.

Fri Apr 04 03:08:35 BST 2003  Olly Betts <olly@survex.com>

	* api/ompostlistiterator.cc: Use "using namespace std;"; replaced
	  gratuitous use of om_ostringstream.

Fri Apr 04 03:07:05 BST 2003  Olly Betts <olly@survex.com>

	* tests/api_nodb.cc: Use "using namespace std;"; removed stray cout
	  debug line.

Wed Apr 02 16:54:50 BST 2003  Olly Betts <olly@survex.com>

	* tests/internaltest.cc: More Sun C++ fixes.
	* PLATFORMS: Updated.

Wed Apr 02 16:39:48 BST 2003  Olly Betts <olly@survex.com>

	* tests/api_db.cc,net/tcpserver.cc,common/tcpserver.h: More Sun C++
	  fettling.

Wed Apr 02 15:42:54 BST 2003  Olly Betts <olly@survex.com>

	* matcher/emptymatch.h,tests/api_db.cc: More fixes for Sun C++.

Wed Apr 02 15:13:58 BST 2003  Olly Betts <olly@survex.com>

	* api/omenquire.cc,api/omqueryinternal.cc,
	  backends/inmemory/inmemory_database.h,common/document.h,
	  common/netclient.h,common/netserver.h,common/networkstats.h,
	  common/omlinebuf.h,common/stats.h,include/om/omerror.h,
	  include/om/omerrorhandler.h,indexer/indexgraph/nodetest.cc,
	  indexer/indexgraph/omindexerbuilder.cc,
	  indexer/indexgraph/omindexerinternal.h,
	  indexer/indexgraph/omstopwordnode.cc,
	  indexer/indexgraph/regexcommon.h,indexer/indexgraph/toposort.h,
	  tests/api_db.cc,tests/api_nodb.cc,testsuite/backendmanager.h:
	  More fixes for Sun C++; removed many superfluous ";" after "}".

Wed Apr 02 03:45:42 BST 2003  Olly Betts <olly@survex.com>

	* api/omdocument.cc,api/omenquire.cc,api/omtermlistiteratorinternal.h,
	  backends/inmemory/inmemory_database.h,backends/quartz/btree.cc,